crates/parser/tests/ast/basic/unbalanced_delim.txt
fn foo((){}
----------
Error: Failed to lex source, encountered invalid token or unbalanced delimiters
  |> ???:1:7
  |
1 | fn foo((){}
  |       ^
